@@ -1,21 +1,93 @@
-// src/main/java/com/mravel/booking/service/HotelBookingMapper.java
 package com.mravel.booking.service;
 
+import com.mravel.booking.dto.BookingPublicDtos.HotelBookingSummaryDTO;
 import com.mravel.booking.dto.HotelBookingDtos.BookingRoomLine;
 import com.mravel.booking.dto.HotelBookingDtos.HotelBookingCreatedDTO;
 import com.mravel.booking.dto.HotelBookingDtos.HotelBookingDetailDTO;
 import com.mravel.booking.model.BookingRoom;
 import com.mravel.booking.model.HotelBooking;
 
+import java.util.Collections;
 import java.util.List;
 
-public class HotelBookingMapper {
+public final class HotelBookingMapper {
 
+    private HotelBookingMapper() {}
+
+    /*
+     * ✅ DTO EXPECTED (SUMMARY) - bạn cần update record/constructor cho HotelBookingSummaryDTO:
+     * HotelBookingSummaryDTO(
+     *   String code,
+     *   String hotelId,
+     *   String hotelName,
+     *   String hotelSlug,
+     *   java.time.LocalDate checkInDate,
+     *   java.time.LocalDate checkOutDate,
+     *   Integer nights,
+     *   Integer roomsCount,
+     *
+     *   String contactName,
+     *   String contactPhone,
+     *   String contactEmail,
+     *
+     *   java.math.BigDecimal totalAmount,
+     *   java.math.BigDecimal depositAmount,
+     *   java.math.BigDecimal amountPayable,
+     *   java.math.BigDecimal amountPaid,
+     *   String currencyCode,
+     *
+     *   String bookingStatus,
+     *   String paymentStatus,
+     *   java.time.Instant createdAt,
+     *   java.time.Instant paidAt,
+     *   java.time.Instant cancelledAt,
+     *   String cancelReason
+     * )
+     */
+
+    // ===================== SUMMARY (CHO LIST) =====================
+    public static HotelBookingSummaryDTO toSummary(HotelBooking b) {
+        if (b == null) return null;
+
+        return new HotelBookingSummaryDTO(
+                b.getCode(),
+
+                b.getHotelId(),
+                b.getHotelName(),
+                b.getHotelSlug(),
+
+                b.getCheckInDate(),
+                b.getCheckOutDate(),
+                b.getNights(),
+                b.getRoomsCount(),
+
+                b.getContactName(),
+                b.getContactPhone(),
+                b.getContactEmail(),
+
+                b.getTotalAmount(),
+                b.getDepositAmount(),
+                b.getAmountPayable(),
+                b.getAmountPaid(),
+                b.getCurrencyCode(),
+
+                b.getStatus() == null ? null : b.getStatus().name(),
+                b.getPaymentStatus() == null ? null : b.getPaymentStatus().name(),
+                b.getCreatedAt(),
+                b.getPaidAt(),
+                b.getCancelledAt(),
+                b.getCancelReason()
+        );
+    }
+
+    // ===================== CREATED (SAU KHI TẠO) =====================
     public static HotelBookingCreatedDTO toCreatedDTO(
             HotelBooking b,
             String paymentMethod,
             String paymentUrl
     ) {
+        if (b == null) return null;
+
         return new HotelBookingCreatedDTO(
                 b.getCode(),
                 b.getHotelName(),
@@ -24,7 +96,7 @@ public class HotelBookingMapper {
                 b.getCheckOutDate(),
                 b.getNights(),
                 b.getRoomsCount(),
-                b.getPayOption().name(),
+                b.getPayOption() == null ? null : b.getPayOption().name(),
                 b.getTotalAmount(),
                 b.getDepositAmount(),
                 b.getAmountPayable(),
@@ -34,9 +106,17 @@ public class HotelBookingMapper {
         );
     }
 
+    // ===================== DETAIL (CHO DETAIL) =====================
+    public static HotelBookingDetailDTO toDetail(HotelBooking b) {
+        return toDetailDTO(b);
+    }
+
     public static HotelBookingDetailDTO toDetailDTO(HotelBooking b) {
-        List<BookingRoomLine> roomLines = (b.getRooms() == null) ? List.of()
-                : b.getRooms().stream().map(HotelBookingMapper::toRoomLine).toList();
+        if (b == null) return null;
+
+        List<BookingRoomLine> roomLines =
+                (b.getRooms() == null) ? Collections.emptyList()
+                        : b.getRooms().stream().map(HotelBookingMapper::toRoomLine).toList();
 
         return new HotelBookingDetailDTO(
                 b.getId(),
@@ -75,12 +155,13 @@ public class HotelBookingMapper {
                 b.getCancelReason(),
 
                 b.getInventoryDeducted(),
-
                 roomLines
         );
     }
 
     private static BookingRoomLine toRoomLine(BookingRoom r) {
+        if (r == null) return null;
+
         return new BookingRoomLine(
                 r.getId(),
                 r.getRoomTypeId(),
